feat(cliente): adiciona campo sexo em Cliente, DTOs e mapeamentos